# pygrpfe

./: LICENSE  README.md  README.rst  setup.cfg  setup.py
docs-src/notebooks/: gfe_notebook.ipynb  nb-gfe-example1.ipynb
pygrpfe/: __init__.py  helpers.py
tests/: test_pygfe.py  test_pygrpfe.py
