[metadata]
name = pygrpfe
version = 0.1.2
author = Thibaut Lamadon
author_email = thibaut.lamadon@gmail.com
description = Helper functions of Group Fixed Effect
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tlamadon/pygrpfe
project_urls =
    GitHub = https://github.com/tlamadon/pygrpfe
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    scipy
    scikit-learn
    statsmodels
    torch
    matplotlib
    tqdm
